# mlops_project

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  custom_job.yaml  env.yaml  pyproject.toml  tasks.py
.github/workflows/: data-changes.yaml  linting.yaml  model-registry-changes.yaml  pre-commit-update.yaml  pre-commit.yaml  tests.yaml
configs/: config.yaml
dockerfiles/: api.dockerfile  train.dockerfile  train.gpu.dockerfile
docs/: mkdocs.yaml
mlops_project/: pyproject.toml  tasks.py
mlops_project/.devcontainer/: devcontainer.json
outputs/2026-01-16/12-34-11/.hydra/: hydra.yaml
outputs/2026-01-16/12-37-17/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-17/13-54-51/.hydra/: hydra.yaml
outputs/2026-01-17/13-56-39/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-01-17/14-14-51/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-17/14-43-02/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-17/15-40-07/.hydra/: config.yaml  hydra.yaml  overrides.yaml
profiler_logs/: gustavbaichembp.students.clients.local_71091.1768566146794905000.pt.trace.json  gustavbaichembp.students.clients.local_71091.1768566149552466000.pt.trace.json  gustavbaichembp.students.clients.local_71183.1768566242210526000.pt.trace.json  gustavbaichembp.students.clients.local_71183.1768566245259642000.pt.trace.json  macbook-air.students.clients.local_55902.1768988134206217000.pt.trace.json  macbook-air.students.clients.local_56661.1768988283736537000.pt.trace.json
reports/: README.md  report.py
src/project/: data.py  jupiter.ipynb  model.py  test.py  train.py
src/project/du_kender_mig/: what.py
tests/: test_data.py  test_model.py  test_training.py
wandb/: latest-run
wandb/run-20260117_135451-y8p4rrkw/: run-y8p4rrkw.wandb
wandb/run-20260117_135639-9vokdvi1/: run-9vokdvi1.wandb
wandb/run-20260117_135639-9vokdvi1/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260117_141452-ko69vuvp/: run-ko69vuvp.wandb
wandb/run-20260117_141452-ko69vuvp/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260117_144303-e1e9fs71/: run-e1e9fs71.wandb
wandb/run-20260117_144303-e1e9fs71/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260117_154008-3kfyvfvd/: run-3kfyvfvd.wandb
wandb/run-20260117_154008-3kfyvfvd/files/: config.yaml  wandb-metadata.json  wandb-summary.json
