[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "project"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "team_68", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "click>=8.1.7",
  "fastapi==0.115.6",
  "hydra-core>=1.3.2",
  "kagglehub>=0.4",
  "loguru>=0.7.3",
  "markdown>=3.10",
  "numpy>=1.26,<2",
  "omegaconf>=2.3",
  "pillow>=10,<11",
  "tensorboard>=2.20",
  "torch==2.2.2",
  "torch-tb-profiler>=0.4.3",
  "torchvision==0.17.2",
  "typer==0.15.1",
  "uvicorn==0.34",
  "wandb>=0.24",
]

[dependency-groups]
dev = [
  "coverage==7.6.9",
  "invoke==2.2",
  "mkdocs==1.6.1",
  "mkdocs-material==9.4.6",
  "mkdocstrings-python==1.12.2",
  "mypy==1.6.1",
  "pre-commit==4.1",
  "pytest==9.0.2",
  "pytest-cov>=6.3",
  "ruff==0.1.3",
  "types-markdown>=0.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [ "tests/*" ]

[tool.mypy]
mypy_path = [ "src" ]
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = [ "import-untyped" ]
